feat: implementar crud service producto, categforia y usuario