@@ -2,14 +2,16 @@ package com.stockflow.core.service.impl;
 
 import com.stockflow.core.dto.UsuarioDto;
 import com.stockflow.core.entity.Usuario;
+import com.stockflow.core.exception.ConflictException;
+import com.stockflow.core.exception.ValidationException;
 import com.stockflow.core.repository.UsuarioRepository;
 import com.stockflow.core.service.UsuarioService;
+import com.stockflow.core.utils.ValidationUtil;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,19 +21,96 @@ public class UsuarioServiceImpl implements UsuarioService {
 
     @Override
     @Transactional
-    public UsuarioDto save(UsuarioDto userDto) {
+    public UsuarioDto insert(UsuarioDto usuarioDto) {
 
-        Usuario user = userDto.toEntity();
+        validarCamposBaseUsuario(usuarioDto, false);
+
+        Usuario user = usuarioDto.toEntity();
+        user.setId(null);
+        user.setVersion(null);
+        if (user.getEstado() == null) {
+            user.setEstado(true);
+        }
+
         Usuario savedUser = userRepository.save(user);
 
         return UsuarioDto.build().fromEntity(savedUser);
     }
 
     @Override
-    public UsuarioDto findByEmail(String email) {
+    @Transactional
+    public UsuarioDto update(UsuarioDto usuarioDto) {
+
+        validarCamposBaseUsuario(usuarioDto, true);
+
+        Usuario userToUpdate = userRepository.findById(usuarioDto.getId())
+                .orElseThrow(() -> new ValidationException("Usuario no encontrado con ID: " + usuarioDto.getId()));
+
+        validateVersion(usuarioDto, userToUpdate);
+
+        userToUpdate.setCodigo(usuarioDto.getCodigo());
+        userToUpdate.setNombre(usuarioDto.getNombre());
+        userToUpdate.setEmail(usuarioDto.getEmail());
+        userToUpdate.setRol(usuarioDto.getRol());
+        userToUpdate.setEstado(usuarioDto.getEstado());
+
+        if (usuarioDto.getContrasena() != null && !usuarioDto.getContrasena().isBlank()) {
+            // IMPORTANTE: Aquí deberías encriptarla antes de setearla
+            // String encodedPassword = passwordEncoder.encode(usuarioDto.getContrasena());
+            // userToUpdate.setContrasena(encodedPassword);
+            userToUpdate.setContrasena(usuarioDto.getContrasena()); // Por ahora directo
+        }
+
+        Usuario savedUser = userRepository.saveAndFlush(userToUpdate);
+
+        return UsuarioDto.build().fromEntity(savedUser);
+    }
+
+    @Override
+    @Transactional
+    public void delete(UsuarioDto usuarioDto) {
+
+        if (userRepository.existsById(usuarioDto.getId())) {
+            userRepository.delete(usuarioDto.toEntity());
+        } else {
+            throw new ValidationException("No se elimino el usuario con ID: " + usuarioDto.getId());
+        }
+
+    }
+
+    private static void validarCamposBaseUsuario(UsuarioDto dto, boolean esUpdate) {
+        ValidationUtil.isRequired(dto.getCodigo(), "El código de usuario es obligatorio.");
+        ValidationUtil.isRequired(dto.getNombre(), "El nombre es obligatorio.");
+        ValidationUtil.isRequired(dto.getEmail(), "El correo electrónico es requerido.");
+        ValidationUtil.isRequired(dto.getRol(), "Debe asignar un rol al usuario.");
+
+        // La contraseña solo es estrictamente obligatoria al crear
+        if (!esUpdate) {
+            ValidationUtil.isRequired(dto.getContrasena(), "La contraseña es obligatoria para nuevos usuarios.");
+        }
+    }
+
+    private static void validateVersion(UsuarioDto usuarioDto, Usuario usuarioBD) {
+        if (usuarioDto.getVersion() != null && !usuarioBD.getVersion().equals(usuarioDto.getVersion())) {
+            UsuarioDto actual = UsuarioDto.build().fromEntity(new UsuarioDto(), usuarioBD);
+            throw new ConflictException("El usuario ha sido modificado por otro administrador. Por favor, recargue la página", actual);
+        }
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public UsuarioDto findById(Integer id) {
+        return userRepository.findById(id)
+                .map(user -> UsuarioDto.build().fromEntity(user))
+                .orElseThrow(() -> new ValidationException("Usuario no encontrado con ID: " + id));
+    }
+
+
+    @Override
+    public UsuarioDto findByNameUser(String email) {
         return userRepository.findByEmail(email)
                 .map(user -> UsuarioDto.build().fromEntity(user))
-                .orElse(null);
+                .orElseThrow(() -> new ValidationException("Usuario no encontrado con EMAIL: " + email));
     }
 
     @Override
@@ -39,6 +118,7 @@ public class UsuarioServiceImpl implements UsuarioService {
     public List<UsuarioDto> findAll() {
         return userRepository.findAll().stream()
                 .map(user -> UsuarioDto.build().fromEntity(user))
-                .collect(Collectors.toList());
+                .toList();
     }
+
 }
